--- a/templates/Reservation_Actions.html
+++ b/templates/Reservation_Actions.html
@@ -10,20 +10,78 @@
             display: flex;
             align-items: center;
             position: relative;
-            right: 9%;
+            left: 284px;
             gap: 15px; /* Adjust space between logos */
+        }
+        .admin-home {
+        text-decoration: none;
+        color: white;
+        background-color: blue;
+        padding: 10px 15px;
+        border-radius: 5px;
+        font-size: medium;
+        position: relative;
+        left: 29%;
+        }
+        .reservation-header {
+            text-decoration: none;
+            color: white;
+            background-color: blue;
+            padding: 10px 15px;
+            border-radius: 5px;
+            font-size: medium;
+            position: relative;
+            left: 12%;
+        }
+
+        .sit-in-reports-header {
+            text-decoration: none;
+            color: white;
+            background-color: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            font-size: medium;
+            position: relative;
+            left: 480px;
+        }
+
+        .feedback-header {
+            text-decoration: none;
+            color: white;
+            background-color: blue;
+            padding: 10px 15px;
+            border-radius: 5px;
+            font-size: medium;
+            position: relative;
+            left: 12%;
+        }
+
+        .announcement-header {
+            text-decoration: none;
+            color: white;
+            background-color: blue;
+            padding: 10px 15px;
+            border-radius: 5px;
+            font-size: medium;
+            position: relative;
+            left: 6%;
         }
     </style>
 </head>
 <body>
     <div class="admin-header">
-        <h1>Reservations</h1>
+        <h1>RESERVATIONS</h1>
         <div class="logo">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="main-logo">
             <img src="{{ url_for('static', filename='UC_logo.png') }}" alt="Logo" class="uc-logo">
             <img src="{{ url_for('static', filename='PSITS_LOGO.png') }}" alt="Logo" class="psits-logo">
         </div>
-        <a href="/admin_dashboard" class="admin-logout">Back to Dashboard</a>
+        <a href="/admin_dashboard" class="admin-home">Home</a>
+        <a href="/sit_in_reports" class="sit-in-reports-header">Reports</a>
+        <a href="/Reservation_Actions" class="reservation-header">Reservations</a>
+        <a href="/feedback" class="feedback-header">Feedbacks</a>
+        <a href="/announcements" class="announcement-header">Announcements</a>
+        <a href="/logout" class="admin-logout">Logout</a>
     </div>   
     <div class="admin-container">
         <div class="search-container">
