--- a/templates/Reservation_Actions.html
+++ b/templates/Reservation_Actions.html
@@ -10,7 +10,7 @@
             display: flex;
             align-items: center;
             position: relative;
-            left: 284px;
+            left: 415px;
             gap: 15px; /* Adjust space between logos */
         }
         .admin-home {
@@ -21,7 +21,7 @@
         border-radius: 5px;
         font-size: medium;
         position: relative;
-        left: 29%;
+        left: 33%;
         }
         .reservation-header {
             text-decoration: none;
@@ -31,18 +31,18 @@
             border-radius: 5px;
             font-size: medium;
             position: relative;
-            left: 12%;
+            left: 15%;
         }
 
         .sit-in-reports-header {
             text-decoration: none;
             color: white;
-            background-color: none;
+            background-color: blue;
             padding: 10px 15px;
             border-radius: 5px;
             font-size: medium;
             position: relative;
-            left: 480px;
+            left: 660px;
         }
 
         .feedback-header {
@@ -53,7 +53,7 @@
             border-radius: 5px;
             font-size: medium;
             position: relative;
-            left: 12%;
+            left: 14%;
         }
 
         .announcement-header {
@@ -64,7 +64,7 @@
             border-radius: 5px;
             font-size: medium;
             position: relative;
-            left: 6%;
+            left: 7%;
         }
     </style>
 </head>
